--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,13 @@
     box-shadow: 0 0 0 1px rgba(63,63,68,.05), 0 1px 3px 0 rgba(63,63,68,.15);
 };
 
+.home-bnt{
+    margin:20px;
+}
+
+.total-sale{
+    grid-row: 1 / span 2;
+}
 
 
 
